<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yellow_background"
    tools:context="com.webclicz.schoolapp.Activities.ChangePassword">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header_band"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:src="@drawable/back_icon"
            android:id="@+id/backButton"
            android:layout_weight="0.14"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/change_password"
            android:layout_gravity="left"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/old_password"
            android:inputType="textPassword"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/black_dashed_line"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_password"
            android:inputType="textPassword"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/black_dashed_line"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retype_password"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etype_password"
            android:inputType="textPassword"
            android:background="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/black_dashed_line"></View>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/header_band"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:id="@+id/changePasswordBtn"
            />
    </LinearLayout>
</LinearLayout>
