<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yellow_background"
    tools:context="com.webclicz.schoolapp.Activities.MarkAttendance">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header_band"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:src="@drawable/back_icon"
            android:id="@+id/backButton"
            android:layout_weight="0.14"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/attendance_summary"
            android:layout_gravity="left"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginTop="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dateSummary"
                    android:text="02/01/2017"
                    android:textSize="16sp"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/calOpen"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:src="@mipmap/ic_launcher_foreground" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/black_dashed_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/calHolder"
                android:visibility="gone">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/monthYear"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:background="#3e3e3e"
                    android:textColor="#ffffff"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="#ffffff"
                    ></View>
                <com.github.sundeepk.compactcalendarview.CompactCalendarView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/compactcalendar_view"
                    android:layout_width="fill_parent"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:layout_height="200dp"
                    app:compactCalendarTargetHeight="200dp"
                    app:compactCalendarTextSize="12sp"
                    app:compactCalendarBackgroundColor="#3e3e3e"
                    app:compactCalendarTextColor="#fff"
                    app:compactCalendarCurrentSelectedDayBackgroundColor="@color/colorPrimary"
                    app:compactCalendarCurrentDayBackgroundColor="@color/transparent"
                    app:compactCalendarMultiEventIndicatorColor="#fff"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/class_division"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/classSummary"></Spinner>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/black_dashed_line"
                ></View>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sessionSummary"></Spinner>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/black_dashed_line"
                ></View>
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/header_band"
                android:text="@string/search"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:id="@+id/search"
                android:layout_marginTop="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/attendanceRe"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
