<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/yellow_background">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/header_band"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:src="@drawable/back_icon"
            android:id="@+id/backButton"
            android:layout_weight="0.14" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/attendance"
            android:layout_gravity="left"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"/>
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/monthYear"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="#3e3e3e"
        android:textColor="#ffffff"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="#ffffff"
        ></View>
    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/compactcalendar_view"
        android:layout_width="fill_parent"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="200dp"
        app:compactCalendarTargetHeight="200dp"
        app:compactCalendarTextSize="12sp"
        app:compactCalendarBackgroundColor="#3e3e3e"
        app:compactCalendarTextColor="#fff"
        app:compactCalendarCurrentSelectedDayBackgroundColor="@android:color/transparent"
        app:compactCalendarCurrentDayBackgroundColor="@color/transparent"
        app:compactCalendarMultiEventIndicatorColor="#fff"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:ellipsize="end"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/border_shadow">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="SUMMARY"
                android:gravity="center"
                android:textColor="#000"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/cell_shape"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/month_total"
                    android:textAlignment="textStart"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:padding="10dp"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/month_total"
                    android:text="Subject"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:textSize="17sp"
                    android:padding="3dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/cell_shape">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/month_absent"
                    android:textAlignment="textStart"
                    android:layout_weight="2"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:padding="10dp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/month_absent"
                    android:text="Subject"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:textSize="17sp"/>
            </LinearLayout><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/cell_shape">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ac_total_year"
                android:textAlignment="textStart"
                android:layout_weight="2"
                android:textSize="17sp"
                android:layout_gravity="center"
                android:padding="10dp"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/ac_total_year"
                android:text="Subject"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:textSize="17sp"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/cell_shape"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ac_absent_year"
                    android:textAlignment="textStart"
                    android:layout_weight="2"
                    android:textSize="17sp"
                    android:layout_gravity="center"
                    android:padding="10dp"/>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:id="@+id/ac_absent_year"
                    android:text="Subject"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
